2001-03-20  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_begin): add LOG_INPUT ifdef here.

	* gtkhtml.c: Add documentation for several more functions.
	(gtk_html_begin_content): remove LOG_INPUT #define, do this in
	html_engine_begin, with gtk_html_stream_log_being now.
	(gtk_html_write): removed logging code.
	(gtk_html_end): removed logging code.
	(gtk_html_export): rename the content and data
	arguments for clarity.
	
2001-03-19  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-stream.c (gtk_html_stream_log_new): helper function to
	allow logging on any stream created with gtk_html_stream_log_new
	rather than gtkhtml_stream_new.
	(stream_log_write): proxy the write to the internal stream.
	(stream_log_close): proxy the close to the internal stream and
	clean up.

	* gtkhtml-stream.h: add prototype for gtk_html_stream_log_new.

2001-03-15  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (accepts_cursor): accept cursor

	* htmlobject.c (move_object_downtree): stop on containers, which
	accepts cursor (like tables)

2001-03-18  Larry Ewing  <lewing@ximian.com>

	* keybindingsrc.emacs: add bindings for space-and-fill and
	break-and-fill for testing.

	* htmlengine.c: fix more warnings I left.

	* gtkhtml.c (command): add handlers for the space-and-fill and
	break-and-fill.

	* gtkhtml-properties.c: add enum entries for space-and-fill, and
	break-and-fill.

	* htmlengine-edit.h (clueflow_style_to_paragraph_style): add
	prototypes

	* htmlengine-edit.c (html_engine_fill_pre_line): utility function
	to word wrap pre lines.
	(html_engine_space_and_fill_line): insert space then fill line.
	(html_engine_break_and_fill_line): fill line then insert paragraph.

2001-03-15  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (update_embedded): add prototype and fix warnings.

2001-03-14  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_update_event): do a container forall
	on the layout to move offscreen objects off of the screen.